--- a/17.InstallCentOS.md
+++ b/17.InstallCentOS.md
@@ -18,3 +18,30 @@ Reinicie a placa de rede<br>
 ip link set dev wlp2s0 down
 ip link set dev wlp2s0 up
 ```
+# Instalar Programas
+
+## Chrome
+```
+echo "You are using $(getconf LONG_BIT) bit Linux distro."
+uname -m
+wget https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm
+sudo yum install ./google-chrome-stable_current_*.rpm 
+google-chrome &
+```
+
+## VSCode
+```
+sudo rpm --import https://packages.microsoft.com/keys/microsoft.asc
+sudo nano /etc/yum.repos.d/vscode.repos
+
+[code]
+name=Visual Studio Code
+baseurl=https://packages.microsoft.com/yumrepos/vscode
+enabled=1
+gpgcheck=1
+gpgkey=https://packages.microsoft.com/keys/microsoft.asc
+
+Ctrl+O, Enter, Ctrl+X
+
+sudo yum install code
+```
