--- a/17.InstallCentOS.md
+++ b/17.InstallCentOS.md
@@ -45,3 +45,27 @@ Ctrl+O, Enter, Ctrl+X
 
 sudo yum install code
 ```
+
+## Git
+Veja se tem instalado:<br>
+```
+git --version
+```
+Se for a versão 1.8.3.1 ou outra abaixo de 2.0, remova:<br>
+```
+sudo yum remove git*
+```
+
+Aponte para o repositório:<br>
+```
+sudo yum -y install https://packages.endpoint.com/rhel/7/os/x86_64/endpoint-repo-1.7-1.x86_64.rpm
+```
+Instale a nova versão:<br>
+```
+sudo yum install git
+```
+Veja se deu certo:<br>
+```
+git --version
+```
+Saída: git version 2.24.1<br>
