--- a/02.Producao.md
+++ b/02.Producao.md
@@ -41,6 +41,7 @@ docker volume ls
 Crie o volume para a aplicação (caso saiba qual pasta deseja persistir os dados)<br>
 ```
 docker volume create mysql
+docker volume create nextcloud
 ```
 Verifique se foi criado<br>
 ```
@@ -73,6 +74,19 @@ docker run \
     --ip 66.6.0.15 \
     --restart=always \
 phpmyadmin/phpmyadmin
+```
+
+### nextcloud
+```
+docker run \
+  -d \
+  -p 8000:80 \
+  -v nextcloud:/var/www/html \
+  --network bridge.66.6 \
+  --name nextcloud \
+  --ip 66.6.0.20 \
+  --restart=always \
+nextcloud
 ```
 
 
