--- a/17.InstallCentOS.md
+++ b/17.InstallCentOS.md
@@ -69,3 +69,31 @@ Veja se deu certo:<br>
 git --version
 ```
 Saída: git version 2.24.1<br>
+
+## GithubDesktop
+https://github.com/gitahead/gitahead.git<br>
+```
+mkdir ahead
+cd ahead
+git clone https://github.com/gitahead/gitahead.git
+cd gitahead
+git submodule init
+git submodule update
+cd dep/openssl/openssl
+./config -fPIC
+make
+mkdir -p build/release
+cd build/release
+yum install cmake
+
+não rodou ainda
+cmake -G Ninja -DCMAKE_BUILD_TYPE=Release ../..
+```
+## Guitar Guit
+https://github.com/soramimi/Guitar/releases/tag/continuous<br>
+```
+https://appimage.org/
+chmod a+x Subsurface*.AppImage
+./Subsurface*.AppImage
+
+```
