--- a/19.InstallUbuntu.md
+++ b/19.InstallUbuntu.md
@@ -4,6 +4,8 @@ Instale as opções padrões<br>
 # Acesso Remoto via SSH (acesso ao terminal)
 Digite no terminal:<br>
 ```
+sudo su
+apt-get update
 apt-get install openssh-server
 service ssh status
 apt-get install nano
