--- a/19.InstallUbuntu.md
+++ b/19.InstallUbuntu.md
@@ -1,7 +1,6 @@
-# Padrão
-Instale as opções padrões<br>
-
-# Acesso Remoto via SSH (acesso ao terminal)
+# Instalação de Programas
+## Terminal
+### Acesso Remoto via SSH (acesso ao terminal)
 Digite no terminal:<br>
 ```
 sudo su
@@ -12,48 +11,24 @@ apt-get install nano
 nano /etc/ssh/sshd_config
 service ssh restart
 ```
-## Como usar
+#### Como acessar de outro PC
+Especificando o usuário<br>
 ```
-ssh usuario@ip-alvo
-ssh usuario@ip-alvo -p numerodaporta
-ssh -l usuario
+ssh ip -l usuario
+```
+Especificando a porta<br>
+```
+ssh ip -l usuario -p 22
 ```
 
-# Acesso Remoto via SSH (acesso ao terminal)
-https://phoenixnap.com/kb/ssh-to-connect-to-remote-server-linux-or-windows<br>
-## Instalar
-Digite no terminal:<br>
-```
-ssh
-sudo apt-get install openssh-client
-ssh localhost
-sudo apt-get install openssh-server ii.
-sudo service ssh status
-ssh localhost
-```
-## Mudar configurações
-```
-sudo nano /etc/ssh/sshd_config
-sudo service ssh restart
-```
-Obs: Caso não tenha o nano:<br>
+### Nano
 ```
 sudo apt-get install nano
 ```
-## Acessando via terminal de outro linux
-```
-ssh your_username@host_ip_address
-```
-
-Especificando a porta<br>
-```
-ssh phoenixnap@185.52.53.222 –p7654
-```
-
-## Tranformando seu Ubuntu num servidor com DNS
+### Tranformando seu Ubuntu num servidor com DNS
 Acesse https://www.noip.com/ e faça uma conta<br>
 
-### Instalando o no-ip<br>
+#### Instalando o no-ip<br>
 ```
 sudo su - 
 cd /usr/local/bin
@@ -89,22 +64,32 @@ para rodar digite
 Caso ainda náo tenha instalado o Docker, acesse o link abaixo?<br>
 https://github.com/renatomportugal/docker/blob/master/01.Install.md#no-ubuntu<br>
 
-### Testar
+#### Testar
 Instale o Container abaixo e acesse o seu endere;o na internet. Verá que funcionou...<br>
 ```
 docker run -d -p 80:80 --restart=always nginx
 ```
-
-# Acesso Remoto via XRDP (acesso ao desktop)
-https://medium.com/@fabianosarmento/como-conectar-%C3%A0-um-servidor-linux-via-remote-desktop-windows-aa5ce95405e8<br>
+### Desinstalar programas
 ```
-sudo apt-get install xrdp
-reboot
-sudo apt-get install xorgxrdp
-reboot
-echo env -u SESSION_MANAGER -u DBUS_SESSION_BUS_ADDRESS mate-session>~/.xsession
+dpkg --list
+sudo apt-get --purge remove nome-do-programa
+sudo aptitude remove program
 ```
-Não Funcionou com o Windows 10, depois testarei.
+## GUI
+### Chrome
 ```
-
+wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+sudo apt install ./google-chrome-stable_current_amd64.deb
 ```
+### Notepad++
+```
+sudo apt-get update
+sudo apt-get install notepadqq
+```
+### Visual Studio Code
+```
+sudo apt-get update
+sudo apt-get install code 
+```
+### Veracrypt
+https://www.veracrypt.fr/en/Downloads.html<br>
