--- a/19.InstallUbuntu.md
+++ b/19.InstallUbuntu.md
@@ -1,13 +1,22 @@
 # Instalação de Programas
 ## Terminal
-### Acesso Remoto via SSH (acesso ao terminal)
-Digite no terminal:<br>
+### Nano
 ```
 sudo su
 apt-get update
+apt-get install nano
+```
+### Acesso Remoto via SSH (acesso ao terminal)
+Digite no terminal:<br>
+```
 apt-get install openssh-server
 service ssh status
 apt-get install nano
+nano /etc/ssh/sshd_config
+service ssh restart
+```
+### Caso queira mexer nas configurações...
+```
 nano /etc/ssh/sshd_config
 service ssh restart
 ```
@@ -19,11 +28,6 @@ ssh ip -l usuario
 Especificando a porta<br>
 ```
 ssh ip -l usuario -p 22
-```
-
-### Nano
-```
-sudo apt-get install nano
 ```
 ### Tranformando seu Ubuntu num servidor com DNS
 Acesse https://www.noip.com/ e faça uma conta<br>
