--- a/01.Install.md
+++ b/01.Install.md
@@ -52,7 +52,24 @@ Reiniciar o sistema.<br>
 ```
 reboot
 ```
+### Passo 06
+Fazer o Docker iniciar coma máquina:<br>
+Verificar se o serviço docker está iniciado:<br>
+```
+sudo systemctl status docker
+```
 
+Iniciar o serviço:<br>
+```
+sudo systemctl start docker
+sudo systemctl status docker
+docker ps
+```
+Habilitar o docker com o início da máquina:<br>
+```
+sudo systemctl enable docker
+sudo systemctl status docker
+```
 ## No Ubuntu
 ###  Passo 01
 Atualizar o sistema<br>
@@ -145,8 +162,23 @@ groups
 ```
 
 ### Passo 12
-Para colocar o Docker para produção veja o próximo passo no link abaixo:<br>
-https://github.com/renatomportugal/docker/blob/master/02.Producao.md
+Fazer o Docker iniciar coma máquina:<br>
+Verificar se o serviço docker está iniciado:<br>
+```
+sudo systemctl status docker
+```
+
+Iniciar o serviço:<br>
+```
+sudo systemctl start docker
+sudo systemctl status docker
+docker ps
+```
+Habilitar o docker com o início da máquina:<br>
+```
+sudo systemctl enable docker
+sudo systemctl status docker
+```
 
 ## No Raspberry Pi 3
 https://docs.docker.com/engine/install/debian/#install-using-the-convenience-script<br>
