--- a/02.Producao.md
+++ b/02.Producao.md
@@ -88,6 +88,37 @@ docker run \
   --restart=always \
 nextcloud
 ```
+### nextcloud
+```
+777, nextcloud-mib, nc-mib, ip 66.6.0.20
+8000, nextcloud-estudo, nc-estudo, ip 66.6.0.21
+8001, nextcloud-media, nc-media, ip 66.6.0.22
+8002, nextcloud-sp, nc-sp, ip 66.6.0.23
+```
+
+
+### collabora
+```
+sudo su
+apt-get install apache2
+a2enmod proxy
+a2enmod proxy_wstunnel
+a2enmod proxy_http
+a2enmod ssl
+exit
+
+docker run \
+  -t \
+  -d \
+  -p 9980:9980 \
+  -e "extra_params=--o:ssl.enable=false" \
+  --network bridge.66.6 \
+  --name collabora\
+  --ip 66.6.0.24 \
+  --restart=always \
+collabora/code
+
+```
 
 # Iniciar o Container com o Docker
 Rode a imagem que deseja que seja iniciada com o sistema<br>
