--- a/02.Producao.md
+++ b/02.Producao.md
@@ -1,14 +1,3 @@
-# Index
-## Rancher
-80,443   - Rancher - Server<br>
-8001     - Rancher - php:7.1.26-apache<br>
-
-## Containers
-20,21,47400-47470 - bogem/ftp
-3306 - mysql:5.7
-8080 - phpmyadmin/phpmyadmin
-8200 - 
-
 # Servidor Padrão
 ## Rede
 Verifica se ter a rede bridge.66.6<br>
@@ -95,8 +84,6 @@ nextcloud
 8001, nextcloud-media, nc-media, ip 66.6.0.22
 8002, nextcloud-sp, nc-sp, ip 66.6.0.23
 ```
-
-
 ### collabora
 ```
 sudo su
@@ -159,6 +146,41 @@ Este comando lista todos os ids dos containers que estão rodando. Para incluir 
 ```
 $(docker container ls -a -q)
 ```
+### Tranformando seu Ubuntu num servidor com DNS
+Acesse https://www.noip.com/ e faça uma conta<br>
+
+#### Instalando o no-ip<br>
+```
+sudo su - 
+cd /usr/local/bin
+wget https://www.noip.com/client/linux/noip-duc-linux.tar.gz
+tar xzf noip-duc-linux.tar.gz
+ls
+cd noip-2.1.9-1/
+ls
+make
+
+deu erro de gcc, depois de pesquisar na internet:
+apt update
+apt install build-essential
+
+make install
+
+selecione a interface de rede correta, rode o ifconfig e veja o ip do PC
+wlp2s0
+
+digita o email e senha
+
+have them all updated, escolha não
+escolha qual endereço quer manter associado, selecione sim
+selecione 5 para a atualização do intervalo
+do you wish to run something at successful update, escolha não
+o arquivo foi criado e movido para /usr/local/etc/no-ip2.conf
+
+para rodar digite
+/usr/local/bin/noip2
+```
+
 # Formatando a saída
 https://docs.docker.com/config/formatting/<br>
 Use aspas simples externamente, internamente use aspas duplas como no exemplo a seguir:<br>
@@ -172,3 +194,13 @@ Tamanho do campo<br>
 ```
 docker inspect -f '{{len .Id}} {{.HostConfig.RestartPolicy.Name}} {{.RestartCount}}' $(docker container ls -q)
 ```
+
+# Rancher
+80,443   - Rancher - Server<br>
+8001     - Rancher - php:7.1.26-apache<br>
+
+## Containers
+20,21,47400-47470 - bogem/ftp
+3306 - mysql:5.7
+8080 - phpmyadmin/phpmyadmin
+8200 - 
