--- a/02.Producao.md
+++ b/02.Producao.md
@@ -146,10 +146,10 @@ Este comando lista todos os ids dos containers que estão rodando. Para incluir 
 ```
 $(docker container ls -a -q)
 ```
-### Tranformando seu Ubuntu num servidor com DNS
+# Tranformando seu Ubuntu num servidor com DNS
 Acesse https://www.noip.com/ e faça uma conta<br>
 
-#### Instalando o no-ip<br>
+## Instalando o no-ip<br>
 ```
 sudo su - 
 cd /usr/local/bin
