--- a/02.Producao.md
+++ b/02.Producao.md
@@ -164,21 +164,73 @@ deu erro de gcc, depois de pesquisar na internet:
 apt update
 apt install build-essential
 
+apt install make
+apt-get update
+apt-get upgrade
+
+Veja qual sua rede, selecione a interface de rede correta, rode o ifconfig e veja o ip do PC
+wlp2s0
+
+Em outro pc: ens34
+
+Para iniciar a instalação:
 make install
 
-selecione a interface de rede correta, rode o ifconfig e veja o ip do PC
-wlp2s0
+Apareceram 3 warnings, mas vamos lá...
+Selecione a interface de rede que foi descoberta acima. No meu caso digitarei 0.
 
 digita o email e senha
 
-have them all updated, escolha não
-escolha qual endereço quer manter associado, selecione sim
+have them all updated, escolha sim caso queira que todos os endereços sejam redirecionados. Escolhi sim.
+Caso escolha não na opção anterior, escolha qual endereço quer manter associado, selecione sim
 selecione 5 para a atualização do intervalo
 do you wish to run something at successful update, escolha não
 o arquivo foi criado e movido para /usr/local/etc/no-ip2.conf
 
 para rodar digite
 /usr/local/bin/noip2
+```
+Fazer ele iniciar com o sistema<br>
+```
+cd /etc/init.d
+sudo nano noip
+
+copie e cole no seu arquivo
+
+        #######################################################
+        #! /bin/sh
+        # . /etc/rc.d/init.d/functions  # uncomment/modify for your killproc
+        case "$1" in
+            start)
+                echo "Starting noip2."
+                /usr/local/bin/noip2
+            ;;
+            stop)
+                echo -n "Shutting down noip2."
+                killproc -TERM /usr/local/bin/noip2
+            ;;
+            *)
+                echo "Usage: $0 {start|stop}"
+                exit 1
+        esac
+        exit 0
+        #######################################################
+
+Salve com Ctrl+O, Enter
+Saia com Ctrl+X
+
+Transformar ele em executável
+Note que a cor dele é diferente
+ls
+sudo chmod +x noip
+sudo chmod ugo+x noip (não entendi pra que serve este, mas executei)
+update-rc.d noip defaults
+ls
+
+```
+Como saber se funcionou?<br>
+```
+service --status-all
 ```
 
 # Formatando a saída
