--- a/02.Producao.md
+++ b/02.Producao.md
@@ -187,51 +187,36 @@ selecione 5 para a atualização do intervalo
 do you wish to run something at successful update, escolha não
 o arquivo foi criado e movido para /usr/local/etc/no-ip2.conf
 
-para rodar digite
-/usr/local/bin/noip2
 ```
 Fazer ele iniciar com o sistema<br>
 ```
-cd /etc/init.d
-sudo nano noip
+sudo nano /etc/systemd/system/noip2.service
 
-copie e cole no seu arquivo
+Cole:
 
-        #######################################################
-        #! /bin/sh
-        # . /etc/rc.d/init.d/functions  # uncomment/modify for your killproc
-        case "$1" in
-            start)
-                echo "Starting noip2."
-                /usr/local/bin/noip2
-            ;;
-            stop)
-                echo -n "Shutting down noip2."
-                killproc -TERM /usr/local/bin/noip2
-            ;;
-            *)
-                echo "Usage: $0 {start|stop}"
-                exit 1
-        esac
-        exit 0
-        #######################################################
+[Unit]
+Description=No-Ip Dynamic DNS Update Service
+After=network.target
 
-Salve com Ctrl+O, Enter
-Saia com Ctrl+X
+[Service]
+Type=forking
+ExecStart=/usr/local/bin/noip2
 
-Transformar ele em executável
-Note que a cor dele é diferente
-ls
-sudo chmod +x noip
-sudo chmod ugo+x noip (não entendi pra que serve este, mas executei)
-update-rc.d noip defaults
-ls
+[Install]
+WantedBy=multi-user.target
 
-```
-Como saber se funcionou?<br>
-```
-service --status-all
-```
+Ctrl+O, Enter
+Ctrl+X
+
+sudo systemctl daemon-reload
+sudo systemctl status noip2
+sudo systemctl enable noip2
+sudo systemctl start noip2
+
+reboot
+sudo systemctl status noip2
+
+ ```
 
 # Formatando a saída
 https://docs.docker.com/config/formatting/<br>
