--- a/21.InstalarPlacaDeRede.md
+++ b/21.InstalarPlacaDeRede.md
@@ -18,5 +18,74 @@ bzip2 -d r8169-6.028.02.tar.bz2
 tar -xvf r8169-6.028.02.tar
 cd r8169-6.028.02/
 
+sudo apt update
+make
+make install
+
+cd /r8169-6.028.02/src/
+ls
+r8169.ko
+
+dmesg | grep r8169
+[    3.443930] r8169 Gigabit Ethernet driver 2.3LK-NAPI loaded
+[    3.455858] r8169 0000:02:00.0 eth0: RTL8102e at 0x        (ptrval), 44:87:fc:b1:50:9d, XID 04c00000 IRQ 18
+[    3.473120] r8169 Gigabit Ethernet driver 2.3LK-NAPI loaded
+[    3.481660] r8169 0000:03:04.0 (unnamed net_device) (uninitialized): not PCI Express
+[    3.507137] r8169 0000:03:04.0 eth1: RTL8169sb/8110sb at 0x        (ptrval), 00:1a:3f:50:93:a1, XID 10000000 IRQ 16
+[    3.531832] r8169 0000:03:04.0 eth1: jumbo features [frames: 7152 bytes, tx checksumming: ok]
+[    3.690185] r8169 0000:02:00.0 ens34: renamed from eth0
+[    3.756267] r8169 0000:03:04.0 enp3s4: renamed from eth1
+[   31.116112] r8169 0000:02:00.0 ens34: link down
+[   31.116130] r8169 0000:02:00.0 ens34: link down
+[   32.689949] r8169 0000:02:00.0 ens34: link up
+
+nano /etc/modules
+
+alias eth1 /home/tcnct/r8169-6.028.02/src/r8169.ko
+
+
+sudo nano /etc/rc.local
+
+#!/bin/sh -e
+#
+# rc.local
+
+rmmod r8169
+sleep 2
+modprobe r8169
+
+Ctrl+O, Enter
+Ctrl+X
+
+reboot
+
+nano /etc/modules
+alias eth1 r8169.ko
+sudo nano /etc/network/interfaces
+
+ip address
+
+sudo nano /etc/netplan/50-cloud-init.yaml
+
+enp3s4
+
+adicione (respeite os espaços)
+enp3s4:
+            addresses:
+            - 192.168.1.105/16
+            gateway4: 192.168.1.1
+            nameservers:
+                addresses:
+                - 192.168.1.1
+                search:
+                - 192.168.1.1
+
+
+sudo netplan apply
+ifconfig
+
+
+
+
 
 ```
