--- a/19.InstallUbuntu.md
+++ b/19.InstallUbuntu.md
@@ -60,6 +60,7 @@ sudo apt-get install notepadqq
 ```
 sudo apt-get update
 sudo apt-get install code 
+sudo apt-get update code
 ```
 ### Veracrypt
 https://www.veracrypt.fr/en/Downloads.html<br>
