--- a/02.Producao.md
+++ b/02.Producao.md
@@ -83,6 +83,7 @@ nextcloud
 8000, nextcloud-estudo, nc-estudo, ip 66.6.0.21
 8001, nextcloud-media, nc-media, ip 66.6.0.22
 8002, nextcloud-sp, nc-sp, ip 66.6.0.23
+8003, nextcloud-code, nc-code, ip 66.6.0.25
 ```
 ### collabora
 ```
