--- a/17.InstallCentOS.md
+++ b/17.InstallCentOS.md
@@ -100,5 +100,11 @@ chmod a+x Subsurface*.AppImage
 ## Postman
 https://www.postman.com/downloads/<br>
 ```
+Baixar manualmente na pasta Downloads
+cd ~
+cd Downloads
+ls
 
+retorna o arquivo Postman-linux-x64-7.29.1.tar.gz
+sudo tar -xzf Postman-linux-x64-7.29.1.tar.gz -C /opt
 ```
