--- a/17.InstallCentOS.md
+++ b/17.InstallCentOS.md
@@ -107,4 +107,11 @@ ls
 
 retorna o arquivo Postman-linux-x64-7.29.1.tar.gz
 sudo tar -xzf Postman-linux-x64-7.29.1.tar.gz -C /opt
+sudo ln -s /opt/Postman/Postman /usr/bin/postman
+
+A linha de baixo é se fer erro.
+sudo yum install libXScrnSaver-1.2.2-6.1.el7.x86_64
+
+Para abrir digite
+postman
 ```
