--- a/03.CriarImagem.md
+++ b/03.CriarImagem.md
@@ -1,16 +1,26 @@
+Baixar a imagem<br>
+```
 docker pull php:7.1.26-apache
+```
 
-Criando uma imagem docker
+Criando uma imagem docker<br>
+```
 mkdir Docker
 cd  Docker
 code .
-criar o arquivo Dockerfile e o index.php
-insira no index.php
+```
+Criar o arquivo Dockerfile<br>
+Criar o arquivo index.php<br>
+
+insira no index.php:<br>
+```
 <?php 
     phpinfo();
 ?>
+```
 
-insira no Dockerfile
+Insira no Dockerfile:<br>
+```
 FROM php:7.1.26-apache
 
 COPY ./ /var/www/html
@@ -18,6 +28,7 @@ COPY ./ /var/www/html
 EXPOSE 80
 
 CMD ["apache2-foreground"]
+```
 
 Criar a imagem (cria com a etiqueta latest)<br>
 ```
@@ -38,8 +49,12 @@ ou<br>
 docker images
 ```
 
-procurar as imagens que comecem com a palavra minha
+procurar as imagens que comecem com a palavra minha:<br>
+```
 docker images | grep minha
+```
 
-para rodar a imagem
+Rodar a imagem<br>
+```
 docker run -p 80:80 minha_imagem
+```
