--- a/02.Producao.md
+++ b/02.Producao.md
@@ -84,6 +84,7 @@ nextcloud
 8001, nextcloud-media, nc-media, ip 66.6.0.22
 8002, nextcloud-sp, nc-sp, ip 66.6.0.23
 8003, nextcloud-code, nc-code, ip 66.6.0.25
+8004, nextcloud-ha, nc-ha, ip 66.6.0.26
 ```
 ### collabora
 ```
