--- a/17.InstallCentOS.md
+++ b/17.InstallCentOS.md
@@ -70,32 +70,31 @@ git --version
 ```
 Saída: git version 2.24.1<br>
 
-## GithubDesktop
-https://github.com/gitahead/gitahead.git<br>
+## RabbitVCS
+https://stackoverflow.com/questions/45836523/how-to-install-rabbitvcs-on-centos7<br>
+### Install EPEL Release
 ```
-mkdir ahead
-cd ahead
-git clone https://github.com/gitahead/gitahead.git
-cd gitahead
-git submodule init
-git submodule update
-cd dep/openssl/openssl
-./config -fPIC
-make
-mkdir -p build/release
-cd build/release
-yum install cmake
-
-não rodou ainda
-cmake -G Ninja -DCMAKE_BUILD_TYPE=Release ../..
+wget https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+sudo yum install epel-release-latest-7.noarch.rpm
 ```
-## Guitar Guit
-https://github.com/soramimi/Guitar/releases/tag/continuous<br>
+### Install Pre-requisites
 ```
-https://appimage.org/
-chmod a+x Subsurface*.AppImage
-./Subsurface*.AppImage
-
+sudo yum install meld pysvn python-dulwich python-simplejson
+```
+### Fetch RabbitVCS packages
+```
+wget ftp://ftp.pbone.net/mirror/ftp5.gwdg.de/pub/opensuse/repositories/home:/hmandevteam/CentOS_7/noarch/rabbitvcs-core-0.17.1-3.2.noarch.rpm
+wget ftp://ftp.pbone.net/mirror/ftp5.gwdg.de/pub/opensuse/repositories/home:/hmandevteam/CentOS_7/noarch/rabbitvcs-cli-0.17.1-3.2.noarch.rpm
+wget ftp://ftp.pbone.net/mirror/ftp5.gwdg.de/pub/opensuse/repositories/home:/hmandevteam/CentOS_7/noarch/python2-rabbitvcs-0.17.1-3.2.noarch.rpm
+wget ftp://ftp.pbone.net/mirror/ftp5.gwdg.de/pub/opensuse/repositories/home:/hmandevteam/CentOS_7/noarch/rabbitvcs-nautilus-0.17.1-3.2.noarch.rpm
+```
+### Install RabbitVCS packages
+```
+sudo yum install rabbitvcs-core-0.17.1-3.2.noarch.rpm
+sudo yum install rabbitvcs-cli-0.17.1-3.2.noarch.rpm
+sudo yum install python2-rabbitvcs-0.17.1-3.2.noarch.rpm
+sudo yum install rabbitvcs-nautilus-0.17.1-3.2.noarch.rpm
+sudo reboot
 ```
 ## Postman
 https://www.postman.com/downloads/<br>
