--- a/17.InstallCentOS.md
+++ b/17.InstallCentOS.md
@@ -45,6 +45,14 @@ Ctrl+O, Enter, Ctrl+X
 
 sudo yum install code
 ```
+### Extensão Sync
+```
+Instale a extensão sync, de Shan Khan, atualmente na versão 3.4.3
+Vai precisar fazer o login no Chrome, na página do github antes...
+Ctrl+P, digite ">Sync: Download Settings" caso tenha alguma informação no Gist do Github.
+Se for a primeira vez, instale todas as extensões que quiser...
+Ctrl+P, digite ">Sync: Update/Upload Settings"
+```
 
 ## Git
 Veja se tem instalado:<br>
@@ -70,31 +78,14 @@ git --version
 ```
 Saída: git version 2.24.1<br>
 
-## RabbitVCS
-https://stackoverflow.com/questions/45836523/how-to-install-rabbitvcs-on-centos7<br>
-### Install EPEL Release
+## Zoom
+https://support.zoom.us/hc/en-us/articles/204206269-Installing-or-updating-Zoom-on-Linux#h_b6ce9fba-dd38-4448-80c0-ac2e58db3acc<br>
+Download:<br>
+https://zoom.us/download?os=linux<br>
 ```
-wget https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-sudo yum install epel-release-latest-7.noarch.rpm
-```
-### Install Pre-requisites
-```
-sudo yum install meld pysvn python-dulwich python-simplejson
-```
-### Fetch RabbitVCS packages
-```
-wget ftp://ftp.pbone.net/mirror/ftp5.gwdg.de/pub/opensuse/repositories/home:/hmandevteam/CentOS_7/noarch/rabbitvcs-core-0.17.1-3.2.noarch.rpm
-wget ftp://ftp.pbone.net/mirror/ftp5.gwdg.de/pub/opensuse/repositories/home:/hmandevteam/CentOS_7/noarch/rabbitvcs-cli-0.17.1-3.2.noarch.rpm
-wget ftp://ftp.pbone.net/mirror/ftp5.gwdg.de/pub/opensuse/repositories/home:/hmandevteam/CentOS_7/noarch/python2-rabbitvcs-0.17.1-3.2.noarch.rpm
-wget ftp://ftp.pbone.net/mirror/ftp5.gwdg.de/pub/opensuse/repositories/home:/hmandevteam/CentOS_7/noarch/rabbitvcs-nautilus-0.17.1-3.2.noarch.rpm
-```
-### Install RabbitVCS packages
-```
-sudo yum install rabbitvcs-core-0.17.1-3.2.noarch.rpm
-sudo yum install rabbitvcs-cli-0.17.1-3.2.noarch.rpm
-sudo yum install python2-rabbitvcs-0.17.1-3.2.noarch.rpm
-sudo yum install rabbitvcs-nautilus-0.17.1-3.2.noarch.rpm
-sudo reboot
+cd Downloads
+sudo yum localinstall zoom_x86_64.rpm
+zoom
 ```
 ## Postman
 https://www.postman.com/downloads/<br>
