--- a/17.InstallCentOS.md
+++ b/17.InstallCentOS.md
@@ -115,3 +115,23 @@ sudo yum install libXScrnSaver-1.2.2-6.1.el7.x86_64
 Para abrir digite
 postman
 ```
+## DBeaver
+https://computingforgeeks.com/install-and-configure-dbeaver-on-fedora-centos/<br>
+### Install Java
+```
+curl -O https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_linux-x64_bin.tar.gz
+tar zxvf openjdk-11.0.2_linux-x64_bin.tar.gz
+sudo mv jdk-11.0.2/ /usr/local/
+sudo nano /etc/profile.d/jdk11.sh
+Ctrl+O, Enter, Ctrl+X
+source /etc/profile.d/jdk11.sh
+java -version
+wich java
+```
+### Download and Install DBeaver
+```
+sudo yum -y install wget
+wget https://dbeaver.io/files/dbeaver-ce-latest-stable.x86_64.rpm
+sudo rpm -Uvh ./dbeaver-ce-latest-stable.x86_64.rpm
+dbeaver
+```
