--- a/04.ConhecendoMais.md
+++ b/04.ConhecendoMais.md
@@ -104,3 +104,12 @@ Copiar arquivos para fora do container. Copiará para a pasta que estiver. Use p
 ```
 docker cp id_do_container:/var/www/html/config/config.php config.php
 ```
+# Busca de Containers
+```
+docker search redis
+```
+# Outros Comandos
+```
+docker inspect <friendly-name|container-id>
+docker logs <friendly-name|container-id>
+```
