--- a/01.Install.md
+++ b/01.Install.md
@@ -6,7 +6,7 @@ https://docs.docker.com/engine/install/ubuntu/<br>
 docker -v
 ```
 
-## No CentOS
+## No CentOS 7
 ### Instalação do Sistema Operacional
 Baixar a ISO<br>
 http://isoredirect.centos.org/centos/7/isos/x86_64/<br>
@@ -70,6 +70,179 @@ Habilitar o docker com o início da máquina:<br>
 sudo systemctl enable docker
 sudo systemctl status docker
 ```
+
+## No CentOS 8
+Estou como usuário root, para usuários comuns utilize o sudo na frente dos comandos que não funcionarem.<br>
+Verificar versão:<br>
+```
+cat /etc/centos-release
+```
+## Passo 01
+Preparar o proxy.<br>
+```
+nano /etc/dnf/dnf.conf
+```
+Veja o arquivo e ajuste:<br>
+```
+[main]
+gpgcheck=1
+installonly_limit=3
+clean_requirements_on_remove=True
+best=True
+skip_if_unavailable=False
+proxy=http://proxy.empresa.com:porta
+proxy_username=user
+proxy_password=pass
+proxy_auth_method=basic
+sslverify=false
+```
+Para gravar Ctrl+O, Enter, e para sair Ctrl+X<br>
+
+## Passo 02
+Update do sistema.<br>
+```
+dnf update
+dnf check-update
+dnf clean all
+```
+
+## Passo 03
+Remover as versões anteriores.<br>
+```
+dnf remove docker \
+    docker-client \
+    docker-client-latest \
+    docker-common \
+    docker-latest \
+    docker-latest-logrotate \
+    docker-logrotate \
+    docker-engine
+```
+## Passo 04
+Adicionar o repositório:<br>
+```
+dnf -y install epel-release
+dnf repolist
+dnf info epel-release
+dnf install 'dnf-command(config-manager)'
+dnf config-manager --set-enabled PowerTools
+dnf config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
+dnf list docker-ce
+dnf list containerd.io
+dnf update --skip-broken
+dnf update --nobest
+dnf update
+dnf repolist
+dnf --disablerepo="*" --enablerepo="epel" list available | wc -l
+dnf repolist -v
+```
+## Passo 05
+Instalar o Docker:<br>
+```
+dnf install docker-ce docker-ce-cli containerd.io --nobest
+```
+
+## Passo 06
+Verificar:<br>
+```
+docker -v
+```
+
+## Passo 07
+Colocar o usuário no grupo Docker:<br>
+```
+whoami
+usermod -aG docker USER
+```
+Verificar:<br>
+```
+id USER
+```
+
+## Passo 08
+Iniciar com a máquina:<br>
+```
+systemctl status docker
+systemctl enable docker
+systemctl enable docker.service
+systemctl start docker
+systemctl status docker
+reboot
+```
+## Passo 09
+Configurar o proxy (se não usar não faça)<br>
+```
+nano /etc/sysconfig/docker
+```
+
+Insira no arquivo:<br>
+```
+HTTP_PROXY=http://USUARIO:SENHA@proxy.DOMINIO:PORTA
+HTTPS_PROXY=https://USUARIO:SENHA@proxy.DOMINIO:PORTA
+NO_PROXY=localhost, 127.0.0.1, localaddress,.localdomain.com
+```
+Para salvar e sair:<br>
+```
+Ctrl+O, Enter, Ctrl+X
+```
+Criar a pasta docker.service.d e o arquivo http-proxy.conf<br>
+```
+cd /etc/systemd/system
+mkdir docker.service.d
+cd docker.service.d
+nano http-proxy.conf
+```
+Adicione as linhas no arquivo:<br>
+```
+[Service]
+Environment="HTTP_PROXY=http://USUARIO:SENHA@proxy.DOMINIO:PORTA"
+```
+Para salvar e sair:<br>
+```
+Ctrl+O, Enter, Ctrl+X
+```
+Reiniciar os serviços:<br>
+```
+systemctl daemon-reload
+systemctl restart docker
+```
+Para verificar se está tudo em ordem:<br>
+```
+systemctl show --property=Environment docker
+```
+Para testar, deverá ter sucesso ao baixar:<br>
+```
+docker pull alpine
+```
+
+## Passo 10
+Instalar o docker-compose<br>
+```
+sudo curl -L "https://github.com/docker/compose/releases/download/1.27.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+sudo chmod +x /usr/local/bin/docker-compose
+```
+### Método alternativo
+```
+wget https://github.com/docker/compose/releases/download/1.27.1/docker-compose-Linux-x86_64
+```
+Se não conseguir, baixe pelo navegador e suba via ftp para qualquer pasta do servidor:<br>
+```
+https://github.com/docker/compose/releases/download/1.27.1/docker-compose-Linux-x86_64
+```
+Renomeie o pacote:<br>
+```
+mv docker-compose-Linux-x86_64 docker-compose
+```
+Copiar para a pasta correta e fazer executável:<br>
+```
+sudo mv docker-compose /usr/local/bin/
+sudo chmod +x /usr/local/bin/docker-compose
+```
+Para testar:<br>
+```
+docker-compose --help
+```
+
 ## No Ubuntu
 ###  Passo 01
 Atualizar o sistema<br>
