--- a/01.Install.md
+++ b/01.Install.md
@@ -242,6 +242,19 @@ Para testar:<br>
 ```
 docker-compose --help
 ```
+## Passo 11
+Desabilitar firewall (caso esteja ativo)<br>
+Este passo é para quem não precisa. Assim que possível pesquisarei sobre o assunto.<br>
+```
+service firewalld stop
+systemctl disable firewalld
+```
+## Passo 12
+Reiniciar serviços de Daemon e docker.<br>
+```
+systemctl daemon-reload
+systemctl restart docker
+```
 
 ## No Ubuntu
 ###  Passo 01
