--- a/00.ComandosLinux.md
+++ b/00.ComandosLinux.md
@@ -1,7 +1,18 @@
 # Sistema Operacional
-Ver qual o sistema está operando<br>
+Saber arquitetura:<br>
 ```
-lsb_release -a
+uname -i
+```
+
+Ver qual o sistema está operando:<br>
+No Ubuntu:<br>
+```
+cat /etc/issue
+cat /proc/version
+```
+No centOS:<br>
+```
+cat /etc/centos-release
 ```
 # Outros comandos
 
