--- a/01.Install.md
+++ b/01.Install.md
@@ -17,6 +17,19 @@ Bibliotecas de Compatibilidade<br>
 Ferramentas de Administração de Sistema<br>
 https://docs.docker.com/engine/install/centos/<br>
 
+### Passo 00
+Configuração do proxy para empresas que usam. Residencial e conexões comuns nem precisa.<br>
+```
+sudo nano /etc/yum.conf
+proxy=http://proxy.example.com:3128 
+proxy_username=yum-user 
+proxy_password=qwerty
+
+Ctrl+O, Enter
+Ctrl+x
+
+```
+
 ### Passo 01
 Setup do repositório<br>
 ```
