--- a/17.InstallCentOS.md
+++ b/17.InstallCentOS.md
@@ -45,10 +45,7 @@ Ctrl+O, Enter, Ctrl+X
 
 sudo yum install code
 
-Não achará o pacote, então... faça de novo...
-Na próxima vez que formatar verei o procedimento correto
-
-sudo rpm --import https://packages.microsoft.com/keys/microsoft.asc
+Não achará o pacote, então...
 sudo sh -c 'echo -e "[code]\nname=Visual Studio Code\nbaseurl=https://packages.microsoft.com/yumrepos/vscode\nenabled=1\ngpgcheck=1\ngpgkey=https://packages.microsoft.com/keys/microsoft.asc" > /etc/yum.repos.d/vscode.repo'
 
 yum check-update
