--- a/17.InstallCentOS.md
+++ b/17.InstallCentOS.md
@@ -75,6 +75,11 @@ Aponte para o repositório:<br>
 ```
 sudo yum -y install https://packages.endpoint.com/rhel/7/os/x86_64/endpoint-repo-1.7-1.x86_64.rpm
 ```
+Se tiver problema com proxy, tente este comando:<br>
+```
+sudo yum install git-all
+```
+
 Instale a nova versão:<br>
 ```
 sudo yum install git
