--- a/08.Docker-compose.md
+++ b/08.Docker-compose.md
@@ -27,3 +27,25 @@ sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
 #Comandos
 
 https://docs.docker.com/compose/reference/<br>
+
+# Instalação alternativa
+```
+https://github.com/docker/compose/releases/
+
+Estando na pasta, copie para /usr/local/bin/docker-compose
+sudo cp ./docker-compose-Linux-x86_64 /usr/local/bin/docker-compose
+```
+Apply executable permissions to the binary:<br>
+```
+sudo chmod +x /usr/local/bin/docker-compose
+```
+Testar<br>
+```
+docker-compose --version
+```
+
+Install command completion<br>
+```
+Acesse https://raw.githubusercontent.com/docker/compose/1.27.3/contrib/completion/bash/docker-compose e salve como docker-compose-completion em qualquer pasta.
+sudo cp docker-compose-completion /etc/bash_completion.d/docker-compose
+```
