--- a/01.Install.md
+++ b/01.Install.md
@@ -84,6 +84,104 @@ sudo systemctl enable docker
 sudo systemctl status docker
 ```
 
+## Passo07
+Instalar o docker-compose<br>
+### Instalação Normal
+https://docs.docker.com/compose/install/<br>
+
+Run this command to download the current stable release of Docker Compose:<br>
+```
+sudo curl -L "https://github.com/docker/compose/releases/download/1.26.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+```
+Apply executable permissions to the binary:<br>
+```
+sudo chmod +x /usr/local/bin/docker-compose
+```
+Testar<br>
+```
+docker-compose --version
+```
+Install command completion<br>
+```
+cd /etc/bash_completion.d/
+sudo curl -L https://raw.githubusercontent.com/docker/compose/1.26.0/contrib/completion/bash/docker-compose -o /etc/bash_completion.d/docker-compose
+```
+#### Possíveis erros
+Note: If the command docker-compose fails after installation, check your path. You can also create a symbolic link to /usr/bin or any other directory in your path.<br>
+```
+sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+```
+
+### Instalação alternativa
+```
+https://github.com/docker/compose/releases/
+
+Estando na pasta, copie para /usr/local/bin/docker-compose
+sudo cp ./docker-compose-Linux-x86_64 /usr/local/bin/docker-compose
+```
+Apply executable permissions to the binary:<br>
+```
+sudo chmod +x /usr/local/bin/docker-compose
+```
+Testar<br>
+```
+docker-compose --version
+```
+
+Install command completion<br>
+```
+Acesse https://raw.githubusercontent.com/docker/compose/1.27.3/contrib/completion/bash/docker-compose e salve como docker-compose-completion em qualquer pasta.
+sudo cp docker-compose-completion /etc/bash_completion.d/docker-compose
+```
+
+
+## Passo 08
+Configurar o proxy (se não usar não faça)<br>
+```
+sudo nano /etc/sysconfig/docker
+```
+
+Insira no arquivo:<br>
+```
+HTTP_PROXY=http://USUARIO:SENHA@proxy.DOMINIO:PORTA
+HTTPS_PROXY=https://USUARIO:SENHA@proxy.DOMINIO:PORTA
+NO_PROXY=localhost, 127.0.0.1, localaddress,.localdomain.com
+```
+Para salvar e sair:<br>
+```
+Ctrl+O, Enter, Ctrl+X
+```
+Criar a pasta docker.service.d e o arquivo http-proxy.conf<br>
+```
+cd /etc/systemd/system
+sudo mkdir docker.service.d
+cd docker.service.d
+sudo nano http-proxy.conf
+```
+Adicione as linhas no arquivo:<br>
+```
+[Service]
+Environment="HTTP_PROXY=http://USUARIO:SENHA@proxy.DOMINIO:PORTA"
+```
+Para salvar e sair:<br>
+```
+Ctrl+O, Enter, Ctrl+X
+```
+Reiniciar os serviços:<br>
+```
+sudo systemctl daemon-reload
+sudo systemctl restart docker
+```
+Para verificar se está tudo em ordem:<br>
+```
+systemctl show --property=Environment docker
+```
+Para testar, deverá ter sucesso ao baixar:<br>
+```
+docker pull alpine
+```
+
+
 ## No CentOS 8
 Estou como usuário root, para usuários comuns utilize o sudo na frente dos comandos que não funcionarem.<br>
 Verificar versão:<br>
