--- a/02.Producao.md
+++ b/02.Producao.md
@@ -131,6 +131,11 @@ Vamos dar o comando para que a imagem inicie junto com o docker.<br>
 docker update --restart=always 98
 ```
 
+Comando para reverter.<br>
+```
+docker update --restart=no 98
+```
+
 Para verificar:<br>
 ```
 docker inspect -f "{{ .HostConfig.RestartPolicy }}" <container_id>
@@ -142,6 +147,7 @@ Lista de todos os containers com id, status de restart e quantidadede (de restar
 ```
 docker inspect -f "{{.Id}} {{.HostConfig.RestartPolicy.Name}} {{.RestartCount}}" $(docker container ls -q)
 ```
+
 
 Explicando:<br>
 Este comando lista todos os ids dos containers que estão rodando. Para incluir todos adicione -a.<br>
