--- a/01.Install.md
+++ b/01.Install.md
@@ -480,5 +480,48 @@ sudo systemctl status docker
 ## No Raspberry Pi 3
 https://docs.docker.com/engine/install/debian/#install-using-the-convenience-script<br>
 ```
-cat /etc/ *-release
+Raspbian
+
+1. Install
+cd ~
+curl -fsSL https://get.docker.com -o get-docker.sh
+sudo sh get-docker.sh
+whoami
+sudo usermod -aG docker your-user
+groups
+
+2. Uninstall (se precisar desinstalar posteriormente)
+sudo apt-get purge docker-ce docker-ce-cli containerd.io
+sudo rm -rf /var/lib/docker
+sudo rm -rf /var/lib/containerd
+
+Remover pacotes desnecessários
+sudo apt autoremove
+
+3. Verificar
+docker -v
+
+4. Iniciar com o Sistema
+sudo systemctl status docker
+sudo systemctl enable docker
+
+Se não estiver rodando
+sudo systemctl start docker
+
+Verificar novamente
+sudo systemctl status docker
+
+5. Atualizar
+sudo apt-get update
+
+6. Comandos Docker
+docker ps -a
+docker images
+docker pull hello-world
+sudo docker run hello-world
+docker ps -a
+docker rm $(docker ps -aq)
+docker ps -a
+docker images
+
 ```
