--- a/24.Raspberry.md
+++ b/24.Raspberry.md
@@ -20,3 +20,8 @@ Por problemas de arquitetura nem todas as imagens funcionarão.
 ```
 docker run hello-world
 ```
+## Postgres
+```
+docker pull postgres:9.6.19
+docker run --name some-postgres -e POSTGRES_PASSWORD=mysecretpassword -d postgres:9.6.19
+```
