--- a/22.Git.md
+++ b/22.Git.md
@@ -5,4 +5,10 @@ mkdir github
 cd github
 git clone https://github.com/renatomportugal/template.git
 cd template
+
+git config --list
+git status
+git push
+git pull
+git fetch
 ```
