--- a/22.GitHub.md
+++ b/22.GitHub.md
@@ -11,4 +11,8 @@ git status
 git push
 git pull
 git fetch
+
+git config --list --show-origin
+git config --global user.name "John Doe"
+git config --global user.email johndoe@example.com
 ```
