--- a/25.Grafana.md
+++ b/25.Grafana.md
@@ -19,3 +19,129 @@ docker ps
 docker-compose up -d
 docker-compose ps
 ```
+# Acessar a porta 8081
+```
+http://localhost:8081
+Title = Example.
+URL= https://example.com.
+Submit
+```
+# Acessar a poorta 30000
+```
+Abrir outra aba
+localhost:3000
+
+admin
+admin
+Log In.
+
+Mude o password para admin2
+Confirme o password para admin2
+Salvar
+```
+# Add a metrics data source
+```
+In the side bar, hover your cursor over the Configuration (gear) icon, and then click Data Sources.
+Click Add data source.
+In the list of data sources, click Prometheus (Select).
+In the URL box, enter http://prometheus:9090
+Click Save & Test.
+```
+# Explore your metrics
+```
+Explore (compass rose) icon.
+No campo de entrada escrito "Enter a PromQL query", digite:
+tns_request_duration_seconds_count
+Shift + Enter
+
+No canto superior direito, clique na seta do dropdown e selecione 5s
+
+Altere a Query
+No campo de entrada escrito "Enter a PromQL query", digite:
+rate(tns_request_duration_seconds_count[5m])
+
+Note que a escala da esquerda mudará.
+
+
+Add the rate function to your query to visualize the rate of requests per second. Enter the following in the Query editor and then press Shift + Enter.
+
+rate(tns_request_duration_seconds_count[5m])
+Shift+Enter
+
+Mudar a legenda (mostrar por rota)
+
+sum(rate(tns_request_duration_seconds_count[5m])) by(route)
+
+Go back to the sample application and generate some traffic by adding new links, voting, or just refresh the browser.
+
+In the upper right corner, click the time picker, and select Last 5 minutes. By zooming in on the last few minutes, it’s easier to see when you receive new data.
+
+Depending on your use case, you might want to group on other labels. Try grouping by other labels, such as status_code, by changing the by(route) part of the query.
+
+```
+
+# Add a logging data source
+
+```
+In the side bar, hover your cursor over the Configuration (gear) icon, and then click Data Sources.
+Click Add data source.
+In the list of data sources, click Loki.
+In the URL box, enter http://loki:3100.
+Click Save & Test to save your changes.
+```
+# Explore your logs
+```
+In the side bar, click the Explore (compass) icon.
+In the data source list at the top, select the Loki data source.
+In the Query editor, enter:
+
+{filename="/var/log/tns-app.log"}
+Shift+Enter
+
+Grafana displays all logs within the log file of the sample application. The height of each bar encodes the number of logs that were generated at that time.
+
+Click and drag across the bars in the graph to filter logs based on time.
+
+Not only does Loki let you filter logs based on labels, but on specific occurrences.
+
+Let’s generate an error, and analyze it with Explore.
+
+In the sample application, post a new link without a URL to generate an error in your browser that says empty url.
+
+Go back to Grafana and enter the following query to filter log lines based on a substring:
+
+{filename="/var/log/tns-app.log"} |= "error"
+Shift + Enter
+
+Click on the log line that says level=error msg="empty url" to see more information about the error.
+
+Logs are helpful for understanding what went wrong. Later in this tutorial, you’ll see how you can correlate logs with metrics from Prometheus to better understand the context of the error.
+```
+
+# Build a dashboard
+```
+A dashboard gives you an at-a-glance view of your data and lets you track metrics through different visualizations.
+
+Dashboards consist of panels, each representing a part of the story you want your dashboard to tell.
+
+Every panel consists of a query and a visualization. The query defines what data you want to display, whereas the visualization defines how the data is displayed.
+
+In the side bar, hover your cursor over the Create (plus sign) icon and then click Dashboard.
+
+Click Add new panel.
+
+In the Query editor below the graph, enter the query from earlier and then press Shift + Enter:
+
+sum(rate(tns_request_duration_seconds_count[5m])) by(route)
+In the Legend field, enter {{route}} to rename the time series in the legend. The graph legend updates when you click outside the field.
+
+In the Panel editor on the right, under Settings, change the panel title to “Traffic”.
+
+Click Apply in the top-right corner to save the panel and go back to the dashboard view.
+
+Click the Save dashboard (disk) icon at the top of the dashboard to save your dashboard.
+
+Enter a name in the New name field and then click Save.
+
+https://grafana.com/tutorials/grafana-fundamentals/#9
+```
